--- a/src/app/components/projects/gallery.component.scss
+++ b/src/app/components/projects/gallery.component.scss
@@ -1,7 +1,10 @@
-@import './../../../style/colors.scss';
-
+@import "./../../../style/colors.scss";
+.wrapper {
+  margin-top: 80px;
+  padding: 0 20px;
+}
 .masonry {
-  width: 97vw;
+  width: 100%;
   height: 90vh;
   padding: 1rem;
   display: grid;
@@ -10,7 +13,6 @@
   row-gap: 0rem;
   column-gap: 1rem;
   margin: 0 auto;
-  margin-top: 75px;
   overflow: hidden;
 }
 
@@ -88,29 +90,29 @@ img:hover {
     grid-column: 1 / -1;
     grid-row: 1 / 2;
   }
-  
+
   .cell--2 {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
     grid-row: 2 / 3;
   }
-  
+
   .cell--3 {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
     grid-row: 3 / 4;
   }
-  
+
   .cell--4 {
     grid-column: 1 / -1;
     grid-row: 4 / 5;
   }
-  
+
   .cell--5 {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
     grid-row: 5 / 6;
   }
-  
+
   .cell--6 {
-    grid-column:  1 / -1;
+    grid-column: 1 / -1;
     grid-row: 6 / -1;
   }
 }
